=== HEAD

* Add Sequel::Model.cache_associations accessor, which can be set to false to not cache association metadata (jeremyevans)

* Add split_values plugin, for moving noncolumn entries from the values hash into a separate hash (jeremyevans) (#868)

=== 4.14.0 (2014-09-01)

* Raise original exception if there is an exception raised when rolling back transaction/savepoint (jeremyevans) (#875)

* Allow delayed evaluation blocks to take dataset as an argument (jeremyevans)

* Allow more types as filter expressions, only specifically disallow Numeric/String expressions (jeremyevans)

* Remove objects from cached association array at time of nested_attributes call instead of waiting until save (jeremyevans)

* Handle composite primary keys when working around validation issues for one_to_(one|many) associations in nested_attributes plugin (jeremyevans) (#870)

* Recognize additional disconnect error in jdbc/jtds adapter (jeremyevans)

* Have association_join work with existing model selections (jeremyevans)

* Fix regression in class_table_inheritance plugin when lazily loading column in middle table (jeremyevans) (#862)

* Add cache_key_prefix method to caching plugin, which can be overridden for custom handling (pete) (#861)

* Add :when option to PostgreSQL create_trigger method, for adding a filter to the trigger (aschrab) (#860)

* Recognize an additional serialization failure on PostgreSQL (tmtm) (#857)

=== 4.13.0 (2014-08-01)

* Use copy constructors instead of overriding Model#dup and #clone (ged, jeremyevans) (#852)

* Fix handling of MySQL create_table foreign_key calls using :key option (mimperatore, jeremyevans) (#850)

* Handle another disconnection error in the postgres adapter (lbosque) (#848)

* Make list plugin update remaining positions after destroying an instance (ehq, jeremyevans) (#847)

* Unalias aliased tables in Dataset#insert (jeremyevans)
