@@ -1,5 +1,7 @@
 === HEAD
 
+* Support more array types by default in the pg_array extension, such as xml[] and uuid[] (jeremyevans)
+
 * Add Sequel::Model.cache_associations accessor, which can be set to false to not cache association metadata (jeremyevans)
 
 * Add split_values plugin, for moving noncolumn entries from the values hash into a separate hash (jeremyevans) (#868)
